feat: added new dynamic search criteria
